# krestiki-noliki

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
